--- a/Board-v2/src/main/resources/templates/members/addMemberForm.html
+++ b/Board-v2/src/main/resources/templates/members/addMemberForm.html
@@ -25,7 +25,46 @@
                     <p class="field-error" th:each="err : ${#fields.globalErrors()}"
                        th:text="${err}">전체 오류 메시지</p>
                 </div>
-                
+
+                <div>
+                    <label for="loginID">아이디</label>
+                    <input type="text" id="loginID" th:field="*{loginID}"
+                           class="form-control" th:errorclass="field-error">
+                    <div class="field-error" th:errors="*{loginID}"/>
+                </div>
+
+                <div>
+                    <label for="loginPW">비밀번호</label>
+                    <input type="password" id="loginPW" th:field="*{loginPW}"
+                           class="form-control" th:errorclass="field-error">
+                    <div class="field-error" th:errors="*{loginPW}"/>
+                </div>
+
+                <div>
+                    <label for="name">이름</label>
+                    <input type="text" id="name" th:field="*{name}"
+                           class="form-control" th:errorclass="field-error">
+                    <div class="field-error" th:errors="*{name}"/>
+                </div>
+
+                <div>
+                    <label for="email">이메일</label>
+                    <input type="text" id="email" th:field="*{email}"
+                           class="form-control" th:errorclass="field-error">
+                    <div class="field-error" th:errors="*{email}"/>
+                </div>
+                <hr class="my-4">
+                <div class="row">
+                    <div class="col">
+                        <button class="w-100 btn btn-primary btn-lg" type="submit">회원가입</button>
+                    </div>
+                    <div class="col">
+                        <button class="w-100 btn btn-secondary btn-lg"
+                                onclick="location.href='posts.html'"
+                                th:onclick="|location.href='@{/}'|"
+                                type="button">취소</button>
+                    </div>
+                </div>
             </form>
         </div>
     </body>
