--- a/Board-v2/src/main/resources/templates/login/loginForm.html
+++ b/Board-v2/src/main/resources/templates/login/loginForm.html
@@ -14,4 +14,44 @@
             }
         </style>
     </head>
+    <body>
+        <div class="container">
+            <div class="py-5 text-center">
+                <h2>로그인</h2>
+            </div>
+
+            <form action="post.html" th:action th:object="${loginForm}" method="post">
+                <div th:if="${#fields.hasGlobalErrors()}">
+                    <p class="field-error" th:each="err : ${#fields.globalErrors()}"
+                       th:text="${err}">전체 오류 메시지</p>
+                </div>
+
+                <div>
+                    <label for="loginID">아이디</label>
+                    <input type="text" id="loginID" th:field="*{loginID}" class="form-control" th:errorclass="field-error">
+                    <div class="field-error" th:errors="*{loginID}"/>
+                </div>
+
+                <div>
+                    <label for="loginPW">비밀번호</label>
+                    <input type="password" id="loginPW" th:field="*{loginPW}" class="form-control" th:errorclass="field-error">
+                    <div class="field-error" th:errors="*{loginPW}"/>
+                </div>
+
+                <hr class="my-4">
+
+                <div class="row">
+                    <div class="col">
+                        <button class="w-100 btn btn-primary btn-lg" type="submit">로그인</button>
+                    </div>
+                    <div class="col">
+                        <button class="w-100 btn btn-primary btn-lg"
+                                onclick="location.href='posts.html'"
+                                th:onclick="|location.href='@{/}'|"
+                                type="button">취소</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </body>
 </html>
