--- a/Board-v2/src/main/resources/templates/members/addMemberForm.html
+++ b/Board-v2/src/main/resources/templates/members/addMemberForm.html
@@ -20,7 +20,7 @@
                 <h2>회원가입</h2>
             </div>
             <h4 class="mb-3">회원 정보 입력</h4>
-            <form action="board.html" th:action th:object="${member}" method="post">
+            <form action="../boardV2/board.html" th:action th:object="${member}" method="post">
                 <div th:if="${#fields.hasGlobalErrors()}">
                     <p class="field-error" th:each="err : ${#fields.globalErrors()}"
                        th:text="${err}">전체 오류 메시지</p>
