--- a/Board-v2/src/main/resources/templates/boardV2/addForm.html
+++ b/Board-v2/src/main/resources/templates/boardV2/addForm.html
@@ -37,7 +37,7 @@
 
                 <div>
                     <label for="regdate">작성 일자</label>
-                    <input type="text" id="regdate" name="regdate" class="form-control" placeholder="작성일자를 입력하세요">
+                    <input type="text" id="regdate" name="regdate" class="form-control" placeholder="작성일자를 입력하세요" readonly>
                 </div>
 
                 <div>
