--- a/Board-v2/src/main/resources/templates/boardV2/boards.html
+++ b/Board-v2/src/main/resources/templates/boardV2/boards.html
@@ -39,7 +39,7 @@
                     <tbody>
                         <tr th:each="board : ${boards}">
                             <td><a href="board.html" th:href="@{/boardV2/boards/{id}(id=${board.id})}" th:text="${board.id}">번호</a></td>
-                            <td><a href="board.html" th:href="@{|/boardV2/boards/${board.id}|}" th:text="${board.name}">제목</a></td>
+                            <td><a href="board.html" th:href="@{|/boardV2/boards/${board.id}|}" th:text="${board.title}">제목</a></td>
                             <td th:text="${board.writer}">글쓴이</td>
                             <td th:text="${board.writer}">내용</td>
                             <td th:text="${board.writer}"></td>
