--- a/Board-v2/src/main/resources/templates/login/loginForm.html
+++ b/Board-v2/src/main/resources/templates/login/loginForm.html
@@ -20,7 +20,7 @@
                 <h2>로그인</h2>
             </div>
 
-            <form action="../boardV2/board.html" th:action th:object="${loginForm}" method="post">
+            <form action="board.html" th:action th:object="${loginForm}" method="post">
                 <div th:if="${#fields.hasGlobalErrors()}">
                     <p class="field-error" th:each="err : ${#fields.globalErrors()}"
                        th:text="${err}">전체 오류 메시지</p>
