--- a/Board-v2/src/main/resources/templates/loginHome.html
+++ b/Board-v2/src/main/resources/templates/loginHome.html
@@ -19,7 +19,7 @@
                 <div class="col">
                     <button class="w-100 btn btn-secondary btn-lg" type="button"
                             th:onclick="|location.href='@{/boardV2/boards}'|">
-                        게시글 등록
+                        게시글 관리
                     </button>
                 </div>
                 <div class="col">
