--- a/Board-v2/src/main/resources/templates/boardV2/post.html
+++ b/Board-v2/src/main/resources/templates/boardV2/post.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="utf-8">
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
+        <link th:href="@{/css/bootstrap.min.css}"
+                href="../css/bootstrap.min.css" rel="stylesheet">
         <style>
             .container {
                 max-width: 560px;
@@ -16,51 +17,59 @@
                 <h2>게시글 상세</h2>
             </div>
 
+            <h2 th:if="${param.status}" th:text="'저장 완료'"></h2>
+
             <div>
                 <label for="postId">번호</label>
                 <input type="text" id="postId" name="postId"
-                       class="form-control" value="1" readonly>
+                       class="form-control" value="1" th:value="${post.postId}" readonly>
             </div>
 
             <div>
                 <label for="postTitle">제목</label>
                 <input type="text" id="postTitle" name="postTitle"
-                       class="form-control" value="제목A" readonly>
+                       class="form-control" value="제목A" th:value="${post.postTitle}" readonly>
             </div>
 
             <div>
                 <label for="postWriter">작성자</label>
                 <input type="text" id="postWriter" name="postWriter"
-                       class="form-control" value="작성자A" readonly>
+                       class="form-control" value="작성자A" th:value="${post.postWriter}" readonly>
             </div>
 
             <div>
                 <label for="postContent">내용</label>
                 <input type="text" id="postContent" name="postContent"
-                       class="form-control" value="내용A" readonly>
+                       class="form-control" value="내용A" th:value="${post.postContent}" readonly>
             </div>
 
             <div>
                 <label for="postDate">작성 날짜</label>
                 <input type="text" id="postDate" name="postDate"
-                       class="form-control" value="" readonly>
+                       class="form-control" value="" th:value="${post.postDate}" readonly>
             </div>
 
             <div>
                 <label for="postHit">조회수</label>
                 <input type="text" id="postHit" name="postHit"
-                       class="form-control" value="500" readonly>
+                       class="form-control" value="500" th:value="${post.postHit}" readonly>
             </div>
 
             <hr class="my-4">
             <div class="row">
                 <div class="col">
-                    <button class="w-100 btn btn-primary btn-lg" onclick="location.href='editPost.html'" type="button">게시글 수정</button>
+                    <button class="w-100 btn btn-primary btn-lg"
+                            onclick="location.href='editPost.html'"
+                            th:onclick="|location.href='@{/boardV2/posts/{postId}/edit(postId=${post.postId})}'|"
+                            type="button">게시글 수정</button>
                 </div>
 
                 <div class="col">
-                    <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='posts.html'" type="button">목록으로</button>
-                </div>자
+                    <button class="w-100 btn btn-secondary btn-lg"
+                            onclick="location.href='post.html'"
+                            th:onclick="|location.href='@{/boardV2/posts}'|"
+                            type="button">목록으로</button>
+                </div>
             </div>
         </div> <!-- /container -->
     </body>
