--- a/Board-v2/src/main/resources/templates/boardV2/addPost.html
+++ b/Board-v2/src/main/resources/templates/boardV2/addPost.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="utf-8">
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
+        <link th:href="@{/css/bootstrap.min.css}"
+                href="../css/bootstrap.min.css" rel="stylesheet">
         <style>
             .container {
                 max-width: 560px;
@@ -17,7 +18,7 @@
             </div>
 
             <h4 class="mb-3">게시물 등록</h4>
-            <form action="post.html" method="post">
+            <form action="post.html" th:action method="post">
                 <div>
                     <label for="postTitle">제목</label>
                     <input type="text" id="postTitle" name="postTitle"
@@ -56,7 +57,9 @@
 
                     <div class="col">
                         <button class="w-100 btn btn-secondary btn-lg"
-                                onclick="location.href='posts.html'" type="button">취소</button>
+                                onclick="location.href='post.html'"
+                                th:onclick="|location.href='@{/boardV2/posts}'|"
+                                type="button">취소</button>
                     </div>
                 </div>
             </form>
