--- a/Board-v2/src/main/resources/templates/boardV2/editPost.html
+++ b/Board-v2/src/main/resources/templates/boardV2/editPost.html
@@ -21,37 +21,37 @@
                 <div>
                     <label for="postId">번호</label>
                     <input type="text" id="postId" name="postId"
-                           class="form-control" value="1" th:value="${posts.postId}" readonly>
+                           class="form-control" value="1" th:value="${post.postId}" readonly>
                 </div>
 
                 <div>
                     <label for="postTitle">제목</label>
                     <input type="text" id="postTitle" name="postTitle"
-                           class="form-control" value="제목A">
+                           class="form-control" value="제목A" th:value="${post.postTitle}">
                 </div>
 
                 <div>
                     <label for="postWriter">작성자</label>
                     <input type="text" id="postWriter" name="postWriter"
-                           class="form-control" value="작성자A">
+                           class="form-control" th:value="${post.postWriter}">
                 </div>
 
                 <div>
                     <label for="postContent">내용</label>
                     <input type="text" id="postContent" name="postContent"
-                           class="form-control" value="내용A">
+                           class="form-control" th:value="${post.postContent}">
                 </div>
 
                 <div>
                     <label for="postDate">작성 날짜</label>
                     <input type="text" id="postDate" name="postDate"
-                           class="form-control" value="">
+                           class="form-control" th:value="${post.postDate}">
                 </div>
 
                 <div>
                     <label for="postHit">조회수</label>
                     <input type="text" id="postHit" name="postHit"
-                           class="form-control" value="500">
+                           class="form-control" th:value="${post.postHit}">
                 </div>
 
                 <hr class="my-4">
@@ -62,7 +62,9 @@
 
                     <div class="col">
                         <button class="w-100 btn btn-secondary btn-lg"
-                                onclick="location.href='post.html'" type="button">취소</button>
+                                onclick="location.href='post.html'"
+                                th:onclick="|location.href='@{/boradV2/posts/{postId}(postId=${post.postId})}'|"
+                                type="button">취소</button>
                     </div>
                 </div>
             </form>
