--- a/Board-v2/src/main/resources/templates/boardV2/post.html
+++ b/Board-v2/src/main/resources/templates/boardV2/post.html
@@ -45,7 +45,7 @@
 
             <div>
                 <label for="postDate">작성 날짜</label>
-                <input type="text" id="postDate" name="postDate"
+                <input type="date" id="postDate" name="postDate"
                        class="form-control" value="" th:value="${post.postDate}" readonly>
             </div>
 
@@ -74,3 +74,7 @@
         </div> <!-- /container -->
     </body>
 </html>
+
+<script>
+    document.getElementById('postDate').valueAsDate = new Date();
+</script>
