--- a/Board-v2/src/main/resources/templates/index.html
+++ b/Board-v2/src/main/resources/templates/index.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8">
         <title>게시판</title>
 
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/headers.css" rel="stylesheet">
+        <link th:href="@{/css/bootstrap.min.css}"
+              href="../css/bootstrap.min.css" rel="stylesheet">
+        <link href="../css/headers.css" rel="stylesheet">
     </head>
 
     <body>
@@ -34,17 +35,60 @@
                                 <img src="https://velog.velcdn.com/images/ljh3478/post/1f769a8e-c6d5-448c-82ea-e036385c69af/image.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
                             </a>
                             <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1" style="">
-                                <li><a class="dropdown-item" href="#">New project...</a></li>
-                                <li><a class="dropdown-item" href="#">Settings</a></li>
-                                <li><a class="dropdown-item" href="#">Profile</a></li>
+                                <li><a class="dropdown-item" href="#">Sign in</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                                <li><a class="dropdown-item" href="#">Sign up</a></li>
+<!--                                <li><a class="dropdown-item" href="#">New project...</a></li>-->
+<!--                                <li><a class="dropdown-item" href="#">Settings</a></li>-->
+<!--                                <li><a class="dropdown-item" href="#">Profile</a></li>-->
+<!--                                <li><hr class="dropdown-divider"></li>-->
+<!--                                <li><a class="dropdown-item" href="#">Sign out</a></li>-->
                             </ul>
                         </div>
                     </div>
                 </div>
             </header>
         </main>
+
+        <div class="container" style="max-width: 600px">
+            <div class="py-5 text-center">
+                <h2>게시물 목록</h2>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <button class="btn btn-primary float-end"
+                            onclick="location.href='addPost.html'"
+                            th:onclick="|location.href='@{/boardV2/posts/add}'|"
+                            type="button">게시물 등록</button>
+                </div>
+            </div>
+
+            <hr class="my-4">
+            <div>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>번호</th>
+                        <th>제목</th>
+                        <th>작성자</th>
+                        <th>작성 날짜</th>
+                        <th>조회수</th>
+                    </tr>
+                    </thead>
+
+                    <tbody>
+                    <tr th:each="post : ${posts}">
+                        <td th:text="${post.postId}">1</td>
+                        <td><a href="post.html" th:href="@{/boardV2/posts/{postId}(postId=${post.postId})}" th:text="${post.postTitle}">title1</a></td>
+                        <td th:text="${post.postWriter}">writer1</td>
+                        <td th:text="${post.postDate}">2023-05-30</td>
+                        <td th:text="${post.postHit}">10</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div> <!-- /container -->
 
         <script src="js/bootstrap.bundle.min.js"></script>
     </body>
