--- a/Board-v2/src/main/resources/templates/index.html
+++ b/Board-v2/src/main/resources/templates/index.html
@@ -35,9 +35,9 @@
                                 <img src="https://velog.velcdn.com/images/ljh3478/post/1f769a8e-c6d5-448c-82ea-e036385c69af/image.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
                             </a>
                             <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1" style="">
-                                <li><a class="dropdown-item" href="#">Sign in</a></li>
+                                <li><a class="dropdown-item" href="login/login.html">Sign in</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Sign up</a></li>
+                                <li><a class="dropdown-item" href="member/addMember.html">Sign up</a></li>
 <!--                                <li><a class="dropdown-item" href="#">New project...</a></li>-->
 <!--                                <li><a class="dropdown-item" href="#">Settings</a></li>-->
 <!--                                <li><a class="dropdown-item" href="#">Profile</a></li>-->
@@ -80,7 +80,7 @@
                     <tbody>
                     <tr th:each="post : ${posts}">
                         <td th:text="${post.postId}">1</td>
-                        <td><a href="post.html" th:href="@{/boardV2/posts/{postId}(postId=${post.postId})}" th:text="${post.postTitle}">title1</a></td>
+                        <td><a href="post/post.html" th:href="@{/boardV2/posts/{postId}(postId=${post.postId})}" th:text="${post.postTitle}">title1</a></td>
                         <td th:text="${post.postWriter}">writer1</td>
                         <td th:text="${post.postDate}">2023-05-30</td>
                         <td th:text="${post.postHit}">10</td>
