--- a/Board-v2/src/main/resources/templates/fragments/bodyHeader.html
+++ b/Board-v2/src/main/resources/templates/fragments/bodyHeader.html
@@ -25,9 +25,9 @@
                     <img src="https://velog.velcdn.com/images/ljh3478/post/1f769a8e-c6d5-448c-82ea-e036385c69af/image.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
                 </a>
                 <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1" style="">
-                    <li><a class="dropdown-item" href="login/login.html">Sign in</a></li>
+                    <li><a class="dropdown-item" href="/sign-in">Sign in</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="member/addMember.html">Sign up</a></li>
+                    <li><a class="dropdown-item" href="/sign-up">Sign up</a></li>
                     <!--                                <li><a class="dropdown-item" href="#">New project...</a></li>-->
                     <!--                                <li><a class="dropdown-item" href="#">Settings</a></li>-->
                     <!--                                <li><a class="dropdown-item" href="#">Profile</a></li>-->
