--- a/Board-v2/src/main/resources/templates/member/addMember.html
+++ b/Board-v2/src/main/resources/templates/member/addMember.html
@@ -22,7 +22,7 @@
         </div>
 
         <h4 class="mb-3">회원 정보 입력</h4>
-        <form action="" th:action th:object="${member}" method="post">
+        <form action="/sign-up" th:action th:object="${member}" method="post">
             <div th:if="${#fields.hasGlobalErrors()}">
                 <p class="field-error"
                    th:each="err : ${#fields.globalErrors()}"
@@ -31,7 +31,7 @@
             </div>
 
             <div>
-                    <label for="loginEmail">이메일</label>
+                    <label for="loginEmail">아이디</label>
                 <input type="text" id="loginEmail" th:field="*{loginEmail}"
                        class="form-control" th:errorclass="field-error">
                 <div class="field-error" th:errors="*{loginEmail}" />
