--- a/Board-v2/src/main/resources/templates/login/loginForm.html
+++ b/Board-v2/src/main/resources/templates/login/loginForm.html
@@ -6,56 +6,32 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.88.1">
-    <title>Sing In</title>
+    <title>Sign In</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sign-in/">
 
-
-
     <!-- Bootstrap core CSS -->
-    <link href="/static/css/bootstrap.min.css"
-          th:href="@{/css/bootstrap.min.css}"rel="stylesheet">
-    <link href="/static/css/signin.css"
-          th:href="@{/css/signin.css}"rel="stylesheet">
-    <link href="/static/css/headers.css"
+    <link href="../css/bootstrap.min.css"
+          th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+    <link href="../css/signin.css"
+          th:href="@{/css/signin.css}" rel="stylesheet">
+    <link href="../css/headers.css"
           th:href="@{/css/headers.css}" rel="stylesheet">
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
-
-
-    <!-- Custom styles for this template -->
 </head>
+
 <body class="text-center">
 
 <main class="form-signin">
-    <form action="memberJoinForm.html" th:action method="post">
+    <form action="/sign-in" th:action method="post">
 
-        <!--    <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">-->
         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
         <div class="form-floating">
-            <input type="text" class="form-control" id="username" name="username" placeholder="Username">
-            <label for="username">username</label>
+            <input type="text" class="form-control" id="loginEmail" name="loginEmail" placeholder="Email Address">
+            <label for="loginEmail">Email Address</label>
         </div>
         <div class="form-floating">
-            <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-            <label for="password">Password</label>
-        </div>
-        <div class="form-floating">
-            <input type="text" class="form-control" id="email" name="email" placeholder="name@example.com">
-            <label for="email">Email</label>
+            <input type="password" class="form-control" id="loginPw" name="loginPw" placeholder="Password">
+            <label for="loginPw">Password</label>
         </div>
         <div class="checkbox mb-3">
             <label>
@@ -64,10 +40,10 @@
         </div>
         <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
         <button class="w-100 btn btn-secondary btn-lg"
-                onclick="location.href='memberList.html'"
-                th:onclick="|location.href='@{/member/memberList}'|"
+                onclick="location.href='home.html'"
+                th:onclick="|location.href='@{/}'|"
                 type="button">취소</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+        <p class="mt-5 mb-3 text-muted">&copy; 게시판 Ver.2</p>
 
     </form>
 </main>
@@ -76,45 +52,3 @@
 
 </body>
 </html>
-
-<!--<!DOCTYPE HTML>-->
-<!--<html xmlns:th="http://www.thymeleaf.org">-->
-<!--<head>-->
-<!--    <meta charset="utf-8">-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
-<!--    <meta name="description" content="">-->
-<!--    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">-->
-<!--    <meta name="generator" content="Hugo 0.88.1">-->
-<!--    <title>Sign In</title>-->
-<!--    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sign-in/">-->
-
-<!--    <link th:href="@{/css/bootstrap.min.css}"-->
-<!--          href="../css/bootstrap.min.css" rel="stylesheet">-->
-<!--    <link th:href="@{/css/signin.css}"-->
-<!--          href="../css/signin.css" rel="stylesheet">-->
-<!--</head>-->
-
-<!--<body class="text-center">-->
-<!--    <main class="form-signin">-->
-<!--        <form action="/sign-in" th:action method="post">-->
-<!--            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>-->
-
-<!--            <div class="form-floating">-->
-<!--                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">-->
-<!--                <label for="floatingInput">Email address</label>-->
-<!--            </div>-->
-
-<!--            <div class="form-floating">-->
-<!--                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">-->
-<!--                <label for="floatingPassword">Password</label>-->
-<!--            </div>-->
-
-<!--            <div class="checkbox mb-3">-->
-<!--                <label>-->
-<!--                    <input type="checkbox" value="remember-me"> Remember me-->
-<!--                </label>-->
-<!--            </div>-->
-<!--            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>-->
-<!--        </form>-->
-<!--    </main>-->
-<!--</body>-->
