--- a/Board-v2/src/main/resources/templates/home.html
+++ b/Board-v2/src/main/resources/templates/home.html
@@ -22,14 +22,14 @@
                 <h2>게시물 목록</h2>
             </div>
 
-            <div class="row">
-                <div class="col">
-                    <button class="btn btn-primary float-end"
-                            onclick="location.href='addPost.html'"
-                            th:onclick="|location.href='@{/post/addPost}'|"
-                            type="button">게시물 등록</button>
-                </div>
-            </div>
+<!--            <div class="row">-->
+<!--                <div class="col">-->
+<!--                    <button class="btn btn-primary float-end"-->
+<!--                            onclick="location.href='addPost.html'"-->
+<!--                            th:onclick="|location.href='@{/post/addPost}'|"-->
+<!--                            type="button">게시물 등록</button>-->
+<!--                </div>-->
+<!--            </div>-->
 
             <hr class="my-4">
             <div>
@@ -47,9 +47,7 @@
                     <tbody>
                         <tr th:each="post : ${posts}">
                             <td th:text="${post.postId}">1</td>
-                            <td><a href="post/post.html"
-                                   th:href="@{/boardV2/posts/{postId}(postId=${post.postId})}"
-                                   th:text="${post.postTitle}">title1</a></td>
+                            <td th:text="${post.postTitle}">title1</a></td>
                             <td th:text="${post.postWriter}">writer1</td>
                             <td th:text="${post.postDate}">2023-05-30</td>
                             <td th:text="${post.postHit}">10</td>
