--- a/Board-v2/src/main/resources/templates/login/loginForm.html
+++ b/Board-v2/src/main/resources/templates/login/loginForm.html
@@ -16,39 +16,58 @@
           th:href="@{/css/signin.css}" rel="stylesheet">
     <link href="../css/headers.css"
           th:href="@{/css/headers.css}" rel="stylesheet">
+
+    <style>
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
+    </style>
 </head>
 
 <body class="text-center">
+    <main class="form-signin">
+        <form action="/sign-in" th:object="${Member}" th:action method="post">
 
-<main class="form-signin">
-    <form action="/sign-in" th:action method="post">
+            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+            <div th:if="${#fields.hasGlobalErrors()}">
+                <p class="field-error" th:each="err : ${#fields.globalErrors()}"
+                   th:text="${err}">전체 오류 메시지</p>
+            </div>
 
-        <div class="form-floating">
-            <input type="text" class="form-control" id="loginEmail" name="loginEmail" placeholder="Email Address">
-            <label for="loginEmail">Email Address</label>
-        </div>
-        <div class="form-floating">
-            <input type="password" class="form-control" id="loginPw" name="loginPw" placeholder="Password">
-            <label for="loginPw">Password</label>
-        </div>
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> Remember me
-            </label>
-        </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-        <button class="w-100 btn btn-secondary btn-lg"
-                onclick="location.href='home.html'"
-                th:onclick="|location.href='@{/}'|"
-                type="button">취소</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 게시판 Ver.2</p>
+            <div class="form-floating">
+                <label for="loginEmail">Email Address</label>
+                <input type="text" id="loginEmail" th:field="*{loginEmail}"
+                       class="form-control"  placeholder="Email Address" th:errorclass="field-error">
+                <div class="field-error" th:errors="*{loginEmail}" />
+            </div>
 
-    </form>
-</main>
+            <div class="form-floating">
+                <label for="loginPw">Password</label>
+                <input type="password" id="loginPw" th:field="*{loginPw}"
+                       class="form-control" placeholder="Password" th:errorclass="field-error">
+                <div class="field-error" th:errors="*{loginPw}" />
+            </div>
 
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" value="remember-me"> Remember me
+                </label>
+            </div>
 
+            <button class="w-100 btn btn-lg btn-primary"
+                    onclick="location.href='loginHome.html'"
+                    th:onclick="|location.href='@{/}'|"
+                    type="submit">Sign in</button>
 
+            <button class="w-100 btn btn-secondary btn-lg"
+                    onclick="location.href='home.html'"
+                    th:onclick="|location.href='@{/}'|"
+                    type="button">취소</button>
+
+            <p class="mt-5 mb-3 text-muted">&copy; 게시판 Ver.2</p>
+        </form>
+    </main>
 </body>
 </html>
