--- a/Board-v2/src/main/resources/templates/loginHome.html
+++ b/Board-v2/src/main/resources/templates/loginHome.html
@@ -13,7 +13,7 @@
 <body>
 <main>
     <header class="p-3 mb-3 border-bottom">
-        <div th:replace="fragments/bodyHeader :: bodyHeader" />
+        <div th:replace="fragments/loginBodyHeader :: bodyHeader" />
     </header>
 </main>
 
