--- a/Board-v2/src/main/resources/templates/member/addMember.html
+++ b/Board-v2/src/main/resources/templates/member/addMember.html
@@ -31,21 +31,21 @@
             </div>
 
             <div>
-                    <label for="loginEmail">아이디</label>
+                    <label for="loginEmail">아이디 *</label>
                 <input type="text" id="loginEmail" th:field="*{loginEmail}"
                        class="form-control" th:errorclass="field-error">
                 <div class="field-error" th:errors="*{loginEmail}" />
             </div>
 
             <div>
-                <label for="loginPw">비밀번호</label>
+                <label for="loginPw">비밀번호 *</label>
                 <input type="password" id="loginPw" th:field="*{loginPw}"
                        class="form-control" th:errorclass="field-error">
                 <div class="field-error" th:errors="*{loginPw}" />
             </div>
 
             <div>
-                <label for="name">이름</label>
+                <label for="name">닉네임 *</label>
                 <input type="text" id="name" th:field="*{name}"
                        class="form-control" th:errorclass="field-error">
                 <div class="field-error" th:errors="*{name}" />
@@ -54,12 +54,15 @@
             <hr class="my-4">
             <div class="row">
                 <div class="col">
-                    <button class="w-100 btn btn-primary btn-lg" type="submit">회원 가입</button>
+                    <button class="w-100 btn btn-primary btn-lg"
+                            onclick="location.href='detailMember.html'"
+                            th:onclick="|location.href='@{/member/detail}'|"
+                            type="submit">회원 가입</button>
                 </div>
 
                 <div class="col">
                     <button class="w-100 btn btn-secondary btn-lg"
-                            onclick="location.href='post/posts.html'"
+                            onclick="location.href='home.html'"
                             th:onclick="|location.href='@{/}'|"
                             type="button">취소</button>
                 </div>
