--- a/Board-v2/src/main/resources/templates/login/loginForm.html
+++ b/Board-v2/src/main/resources/templates/login/loginForm.html
@@ -31,23 +31,14 @@
 
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
-            <div th:if="${#fields.hasGlobalErrors()}">
-                <p class="field-error" th:each="err : ${#fields.globalErrors()}"
-                   th:text="${err}">전체 오류 메시지</p>
-            </div>
-
             <div class="form-floating">
-                <label for="loginEmail">Email Address</label>
-                <input type="text" id="loginEmail" th:field="*{loginEmail}"
-                       class="form-control"  placeholder="Email Address" th:errorclass="field-error">
-                <div class="field-error" th:errors="*{loginEmail}" />
+                <label for="loginEmail">Email address</label>
+                <input type="email" class="form-control" id="loginEmail" placeholder="name@example.com">
             </div>
 
             <div class="form-floating">
                 <label for="loginPw">Password</label>
-                <input type="password" id="loginPw" th:field="*{loginPw}"
-                       class="form-control" placeholder="Password" th:errorclass="field-error">
-                <div class="field-error" th:errors="*{loginPw}" />
+                <input type="password" class="form-control" id="loginPw" placeholder="Password">
             </div>
 
             <div class="checkbox mb-3">
@@ -56,17 +47,8 @@
                 </label>
             </div>
 
-            <button class="w-100 btn btn-lg btn-primary"
-                    onclick="location.href='loginHome.html'"
-                    th:onclick="|location.href='@{/}'|"
-                    type="submit">Sign in</button>
-
-            <button class="w-100 btn btn-secondary btn-lg"
-                    onclick="location.href='home.html'"
-                    th:onclick="|location.href='@{/}'|"
-                    type="button">취소</button>
-
-            <p class="mt-5 mb-3 text-muted">&copy; 게시판 Ver.2</p>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <p class="mt-5 mb-3 text-muted">©  게시판 Ver.2</p>
         </form>
     </main>
 </body>
