--- a/Board-v2/src/main/resources/templates/login/loginForm.html
+++ b/Board-v2/src/main/resources/templates/login/loginForm.html
@@ -47,7 +47,16 @@
                 </label>
             </div>
 
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <button class="w-100 btn btn-lg btn-primary"
+                    onclick="location.href='loginHome.html'"
+                    th:onclick="|location.href='@{/}'|"
+                    type="submit">Sign in</button>
+
+            <button class="w-100 btn btn-secondary btn-lg"
+                    onclick="location.href='home.html'"
+                    th:onclick="|location.href='@{/}'|"
+                    type="button">취소</button>
+
             <p class="mt-5 mb-3 text-muted">©  게시판 Ver.2</p>
         </form>
     </main>
