--- a/Board-v2/src/main/resources/templates/post/addPost.html
+++ b/Board-v2/src/main/resources/templates/post/addPost.html
@@ -1,40 +1,67 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="header">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-          crossorigin="anonymous">
-    <title>게시물 등록</title>
-</head>
 
-<style>
-    .fieldError {
-        border-color: #bd2130;
-    }
-</style>
+    <head>
+        <meta charset="utf-8">
+        <link th:href="@{/css/bootstrap.min.css}"
+            href="../css/bootstrap.min.css" rel="stylesheet">
 
-<body>
-<div class="container">
-    <form th:action="@{/posts/new}" th:object="${form}" method="post">
+        <style>
+            .container {
+                max-width: 560px;
+            }
+            .field-error {
+                border-color: #dc3545;
+                color: #dc3545;
+            }
+        </style>
+    </head>
 
-        <div class="form-group">
-            <label th:for="postTitle">제목</label>
-            <input type="text" th:field="*{postTitle}" class="form-control" placeholder="제목을 입력하세요">
+    <body>
+        <div class="container">
+            <div class="py-5 text-center">
+                <h2>게시물 등록</h2>
+            </div>
+
+            <h2 th:if="${param.status}" th:text="'등록 완료!'"></h2>
+
+            <form action="/posts/new" th:action method="post" th:object="${form}">
+                <div th:if="${#fields.hasGlobalErrors()}">
+                    <p class="field-error"
+                       th:each="err : ${#fields.globalErrors()}"
+                       th:text="${err}">전체 오류 메시지
+                    </p>
+                </div>
+
+                <div>
+                    <label for="postTitle">제목</label>
+                    <input type="text" id="postTitle" th:field="*{postTitle}"
+                           class="form-control" th:errorclass="field-error">
+                    <div class="field-error" th:errors="*{postTitle}" />
+                </div>
+
+                <div>
+                    <label for="postContent">내용</label>
+                    <input type="text" id="postContent" th:field="*{postContent}"
+                           class="form-control" th:errorclass="field-error">
+                    <div class="field-error" th:errors="*{postContent}" />
+                </div>
+
+                <hr class="my-4">
+                <div class="row">
+                    <div class="col">
+                        <button class="w-100 btn btn-primary btn-lg"
+                                th:onclick="|location.href='@{/posts/detail}'|"
+                                type="submit">등록</button>
+                    </div>
+
+                    <div class="col">
+                        <button class="w-100 btn btn-secondary btn-lg"
+                                th:onclick="|location.href='@{/}'|"
+                                type="button">취소</button>
+                    </div>
+                </div>
+            </form>
         </div>
-        <div class="form-group">
-            <label th:for="postContent">내용</label>
-            <input type="text" th:field="*{postContent}" class="form-control" placeholder="내용을 입력하세요">
-        </div>
-
-        <button type="submit" class="btn btn-primary">Post</button>
-    </form>
-    <br/>
-
-    <div class="footer" th:fragment="footer">
-        <p>&copy; 게사판 Ver.2</p>
-    </div>
-</div> <!-- /container -->
-</body>
+    </body>
 </html>
