--- a/Board-v2/src/main/resources/templates/post/editPost.html
+++ b/Board-v2/src/main/resources/templates/post/editPost.html
@@ -1,48 +1,49 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="utf-8">
-        <link th:href="@{/css/bootstrap.min.css}"
-              href="../css/bootstrap.min.css" rel="stylesheet">
-        <style>
-            .container {
-                max-width: 560px;
-            }
-        </style>
-    </head>
 
-    <body>
-        <div class="container">
-            <div class="py-5 text-center">
-                <h2>게시물 수정</h2>
-            </div>
+<head>
+    <meta charset="utf-8">
+    <link th:href="@{/css/bootstrap.min.css}"
+          href="../css/bootstrap.min.css" rel="stylesheet">
 
-            <form action="/posts/edit" th:action method="post" th:object="${form}">
-                <div>
-                    <label for="postTitle">제목</label>
-                    <input type="text" id="postTitle" name="postTitle"
-                           class="form-control" th:value="${post.postTitle}">
-                </div>
+    <style>
+        .container {
+            max-width: 560px;
+        }
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
+    </style>
+</head>
 
-                <div>
-                    <label for="postContent">내용</label>
-                    <input type="text" id="postContent" name="postContent"
-                           class="form-control" th:value="${post.postContent}">
-                </div>
-
-                <hr class="my-4">
-                <div class="row">
-                    <div class="col">
-                        <button class="w-100 btn btn-primary btn-lg" type="submit">수정</button>
-                    </div>
-
-                    <div class="col">
-                        <button class="w-100 btn btn-secondary btn-lg"
-                                th:onclick="|location.href='@{/basic/items/{itemId}(itemId=${item.id})}'|"
-                                type="button">취소</button>
-                    </div>
-                </div>
-            </form>
+<div class="container">
+    <form th:object="${form}" method="post">
+        <!-- id -->
+        <input type="hidden" th:field="*{id}" />
+        <div class="form-group">
+            <label th:for="name">상품명</label>
+            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력하세요" />
         </div>
-    </body>
+        <div class="form-group">
+            <label th:for="price">가격</label>
+            <input type="number" th:field="*{price}" class="form-control" placeholder="가격을 입력하세요" />
+        </div>
+        <div class="form-group">
+            <label th:for="stockQuantity">수량</label>
+            <input type="number" th:field="*{stockQuantity}" class="form-control" placeholder="수량을 입력하세요" />
+        </div>
+        <div class="form-group">
+            <label th:for="author">저자</label>
+            <input type="text" th:field="*{author}" class="form-control" placeholder="저자를 입력하세요" />
+        </div>
+        <div class="form-group">
+            <label th:for="isbn">ISBN</label>
+            <input type="text" th:field="*{isbn}" class="form-control" placeholder="ISBN을 입력하세요" />
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    <div th:replace="fragments/footer :: footer" />
+</div> <!-- /container -->
+</body>
 </html>
