--- a/Board-v2/src/main/resources/templates/post/addPost.html
+++ b/Board-v2/src/main/resources/templates/post/addPost.html
@@ -51,7 +51,7 @@
                 <div class="row">
                     <div class="col">
                         <button class="w-100 btn btn-primary btn-lg"
-                                th:onclick="|location.href='@{/posts/detail}'|"
+                                th:onclick="|location.href='@{/}'|"
                                 type="submit">등록</button>
                     </div>
 
