--- a/Board-v2/src/main/resources/templates/loginHome.html
+++ b/Board-v2/src/main/resources/templates/loginHome.html
@@ -78,7 +78,7 @@
             <tr th:each="post : ${posts}">
                 <td th:text="${post.postId}"></td>
                 <td><a href="post/detailPost.html"
-                       th:href="@{/boardV2/posts/{postId}(postId=${post.postId})}"
+                       th:href="@{/posts/datail/{postId}(postId=${post.postId})}"
                        th:text="${post.postTitle}"></a></td>
                 <td th:text="${post.postWriter}"></td>
                 <td th:text="${post.postDate}"></td>
