--- a/Board-v2/src/main/resources/templates/post/detailPost.html
+++ b/Board-v2/src/main/resources/templates/post/detailPost.html
@@ -19,32 +19,32 @@
         <h2>게시물 상세</h2>
     </div>
 
-    <form method="post" th:object="${form}">
-        <div>
+    <form th:object="${post}" method="post">
+        <div class="form-group">
             <label th:for="postWriter">작성자</label>
             <input type="text" th:field="*{postWriter}"
                    class="form-control" readonly>
         </div>
 
-        <div>
+        <div class="form-group">
             <label th:for="postDate">작성날짜</label>
             <input type="text" th:field="*{postDate}"
                    class="form-control" readonly>
         </div>
 
-        <div>
+        <div class="form-group">
             <label th:for="postHit">조회수</label>
             <input type="text" th:field="*{postHit}"
                    class="form-control" readonly>
         </div>
 
-        <div>
+        <div class="form-group">
             <label th:for="postTitle">제목</label>
             <input type="text" th:field="*{postTitle}"
                    class="form-control" readonly>
         </div>
 
-        <div>
+        <div class="form-group">
             <label th:for="postContent">내용</label>
             <input type="text" th:field="*{postContent}"
                    class="form-control" readonly>
