--- a/Board-v2/src/main/resources/templates/loginHome.html
+++ b/Board-v2/src/main/resources/templates/loginHome.html
@@ -64,7 +64,7 @@
     <hr class="my-4">
     <div>
         <table class="table table-striped">
-            <thead>
+            <thead>ㅈ
             <tr>
                 <th>번호</th>
                 <th>제목</th>
